tests/snapshots/pager__pager_search_case_insensitive_prefix_parsing@transcript.snap
---
source: tests/pager.rs
expression: transcript
---
== session: default ==
1) r_repl timeout_ms=30000
>>> line <- paste(rep("x", 200), collapse = ""); for (i in 1:200) cat(sprintf("line%04d %s\n", i, line))
<<< line0001 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
<<< --More-- (140p, 0.5%, @0..210/42000)

2) r_repl timeout_ms=30000
>>> :where -i LINE01
<<< [pager] next match is ~98 page(s) ahead: use :/i LINE01 or `:skip 98`
<<< --More-- (140p, 0.5%, @210/42000)

3) r_repl timeout_ms=30000
>>> :/i LINE01
<<< [pager] search for `LINE01` @20790
<<< [match] line0100 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...
<<< --More-- (71p, 49.5%, @20790/42000)

4) r_repl timeout_ms=30000
>>> :/iLINE01
<<< [pager] pattern not found: iLINE01
<<< --More-- (71p, 49.5%, @20790/42000)

5) r_repl timeout_ms=30000
>>> :q
<<< (END, 49.5%, @20790/42000)
